--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="hero-container">
         <div class="hero-text">
             <h1>Welcome !</h1>
-            <p>My name is Clement Dupic, a computer engineering student at INSA Lyon, France. I am keen in data analyses and wish to do finance related projects.</p>
+            <p>I am Clement Dupic, a computer engineering student at INSA Lyon, France. I am keen in data analyses and wish to do finance related projects.</p>
             <a href="#learn-more-description" id="learn-more-btn" class="btn-primary">Learn More</a>
             <div id="learn-more-description" class="hidden-description">
                 <p>Currently, in my first year of this degree, I have attended Harvard CS50's Introduction To Artificial Intelligence with Python course (98% grade). I am also commited in the <a href="https://sia.asso-insa-lyon.fr/" target="_blank"><strong>SIA</strong></a> where I contribute as a developer for the moment. More information can be found in the resume attached below.</p>
