--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="hero-container">
         <div class="hero-text">
             <h1>Welcome !</h1>
-            <p>I am Clement Dupic, a computer engineering student at INSA Lyon, France. I am keen in data analyses and wish to do finance related projects.</p>
+            <p>I am Clement Dupic, a computer engineering student at INSA Lyon, France. I am keen in data analysis and wish to do finance related projects.</p>
             <a href="#learn-more-description" id="learn-more-btn" class="btn-primary">Learn More</a>
             <div id="learn-more-description" class="hidden-description">
                 <p>Currently, in my first year of this degree, I have attended Harvard CS50's Introduction To Artificial Intelligence with Python course (98% grade). I am also commited in the <a href="https://sia.asso-insa-lyon.fr/" target="_blank"><strong>SIA</strong></a> where I contribute as a developer for the moment. More information can be found in the resume attached below.</p>
@@ -93,7 +93,7 @@
                 </div>
                 <div class="project-content">
                     <h3>Currency Converter</h3>
-                    <p>Currency converter made with <a href="https://docs.python.org/3/library/tkinter.html" target="_blank"><strong>Tkinter</strong></a> and relying on web-scraping to get the actual currency rates.</p>
+                    <p>Currency converter made with <a href="https://docs.python.org/3/library/tkinter.html" target="_blank"><strong>Tkinter</strong></a> and relying on web-scraping to get the present currency rates.</p>
                 </div>
                 <div class="project-footer">
                     <a href="https://github.com/cdupic/convertisseur-monnaies" target="_blank">
@@ -214,7 +214,7 @@
         </div>
     </div>
     <div class="footer-bottom">
-        <p>&copy; 2024 Clement Dupic. All rights reserved. | <a href="#">Privacy Policy</a></p>
+        <p>&copy; 2024 Clement Dupic. All rights reserved.</p>
     </div>
 </footer>
 
